Colaboratory를 통해 생성됨

--- a/py231019.ipynb
+++ b/py231019.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQ0nSb5uO9UPpF8UhNzG1b",
+      "authorship_tag": "ABX9TyM5cwxhBhAevhL4vL12ahKy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,33 +142,33 @@
         "\n",
         "\n",
         "print(\"국어 점수 순위\")\n",
-        "print(n4)\n",
-        "print(n2)\n",
-        "print(n1)\n",
-        "print(n3)\n"
+        "print(\"1등\", n4)\n",
+        "print(\"2등\", n2)\n",
+        "print(\"3등\", n1)\n",
+        "print(\"4등\", n3)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-62gkdCi4QtB",
-        "outputId": "0778da44-df5b-435c-d311-ba492b6fbf47"
+        "outputId": "10bd5050-6d17-46c4-8a2b-105a9275ae67"
       },
-      "execution_count": 16,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "학생 점수를 입력하시오박보검 90점\n",
-            "학생 점수를 입력하시오션 92점\n",
-            "학생 점수를 입력하시오도룡용 80점\n",
+            "학생 점수를 입력하시오션 92점 \n",
+            "학생 점수를 입력하시오도룡용 80 \n",
             "학생 점수를 입력하시오차은우 99점\n",
             "국어 점수 순위\n",
-            "차은우 99점\n",
-            "션 92점\n",
-            "박보검 90점\n",
-            "도룡용 80점\n"
+            "1등 차은우 99점\n",
+            "2등 션 92점 \n",
+            "3등 박보검 90점\n",
+            "4등 도룡용 80 \n"
           ]
         }
       ]
