Colaboratory를 통해 생성됨

--- a/CTC_7_1.ipynb
+++ b/CTC_7_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPoRkNvl4W4mrXYRFQ6vHMB",
+      "authorship_tag": "ABX9TyMoB3Vl/8kS++UuI4raKzQs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -201,6 +201,82 @@
           "text": [
             "섭씨온도를 입력하시오.: 37.77777777777778 \n",
             "섭씨온도 37.77777777777778도는, 화씨100.0도 입니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. 사용자로부터 2개의 정수를 받아서 합계를 출력"
+      ],
+      "metadata": {
+        "id": "o2WZsPLtU4PA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"정수 2개를 입력하시오.\")\n",
+        "x = int(input(\"x: \"))\n",
+        "y = int(input(\"y: \"))\n",
+        "sum = x + y\n",
+        "print(\"합계:\", sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8a0j1goaU__I",
+        "outputId": "de6fee74-0d6a-45a2-aafc-a2e1d3bd3011"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정수 2개를 입력하시오.\n",
+            "x: 1\n",
+            "y: 2\n",
+            "합계: 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. 부가세를 계산하시오"
+      ],
+      "metadata": {
+        "id": "f5qgEbPQWnfS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"상품의 가격을 입력하시오\")\n",
+        "price = int(input(\"가격: \"))\n",
+        "vat = price * 0.1\n",
+        "print(\"부가세:\", vat)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zqKc7XCiWqCR",
+        "outputId": "8f50e1e2-484b-42b7-b2b1-4c1ab0db7fd4"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "상품의 가격을 입력하시오\n",
+            "가격: 5000\n",
+            "부가세: 500.0\n"
           ]
         }
       ]
