--- a/CT2nd_code.ipynb
+++ b/CT2nd_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNx4x+ZQ1J5Uaov5DT+vloV",
+      "authorship_tag": "ABX9TyPlBspxSsTwSU/d5fKvTkN0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -60,11 +60,17 @@
         }
       ],
       "source": [
+        "# n1의 값을 사용자로부터 입력받고, 입력받은 문자열을 int() 함수를 이용해 정수로 변환합니다.\n",
         "n1 = int(input(\"n1의 값을 입력하시오.:\"))\n",
+        "# n2의 값을 사용자로부터 입력받고, 입력받은 문자열을 int() 함수를 이용해 정수로 변환합니다.\n",
         "n2 = int(input(\"n2의 값을 입력하시오.:\"))\n",
+        "# n3의 값을 사용자로부터 입력받고, 입력받은 문자열을 int() 함수를 이용해 정수로 변환합니다.\n",
         "n3 = int(input(\"n3의 값을 입력하시오.:\"))\n",
+        "# 세 개의 값을 모두 더하여 total 변수에 할당합니다.\n",
         "total = n1 + n2 + n3\n",
+        "# 세 개의 값의 평균을 계산하여 average 변수에 할당합니다.\n",
         "average = total / 3\n",
+        "# 평균 값을 출력합니다.\n",
         "print(average)"
       ]
     }
