Colaboratory를 통해 생성됨

--- a/CTBL_1ipynb.ipynb
+++ b/CTBL_1ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEAw6+ME/FEl0mmZvKL1ug",
+      "authorship_tag": "ABX9TyPhmabSsYDG7RwiyXg9sDrE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,10 +40,14 @@
     {
       "cell_type": "code",
       "source": [
+        "# Grade 변수에 사용자로부터 성적을 입력받습니다. 입력받은 문자열을 int() 함수를 이용해 정수로 변환합니다.\n",
         "Grade = int(input(\"성적입력: \"))\n",
+        "# 입력받은 성적이 70점 이상인지를 판단합니다.\n",
         "if Grade >= 70:\n",
+        "   # 성적이 70점 이상이면, \"70점 이상이므로 합격\"을 출력합니다.\n",
         "   print(\"70점 이상이므로 합격\")\n",
         "else:\n",
+        "  # 성적이 70점 미만이면, \"70점 이하는 불합격\"을 출력합니다.\n",
         "  print(\"70점 이하는 불합격\")"
       ],
       "metadata": {
@@ -53,7 +57,7 @@
         "id": "eYBZZi2O1QRG",
         "outputId": "bfeb76e8-97e5-44c7-dc3b-73dd1168055d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,13 +84,20 @@
     {
       "cell_type": "code",
       "source": [
+        "# price 변수에 사용자로부터 구입금액을 입력받습니다. 입력받은 문자열을 int() 함수를 이용해 정수로 변환합니다.\n",
         "price = int(input(\"구입금액 입력: \"))\n",
+        "# 입력받은 구입금액이 2만원 이상인지를 판단합니다.\n",
         "if price >= 20000:\n",
+        "   # 구입금액이 2만원 이상이면, 배송비를 0으로 설정합니다.\n",
         "   shipping_cost = 0\n",
+        "   # 구입금액이 2만원 이상이므로, 해당 사실을 출력합니다.\n",
         "   print(f'구입금액이 {price}원 이상입니다.')\n",
         "else:\n",
+        "  # 구입금액이 2만원 미만이면, 배송비를 3000원으로 설정합니다.\n",
         "  shipping_cost = 3000\n",
+        "  # 구입금액이 2만원 미만이므로, 해당 사실을 출력합니다.\n",
         "  print(\"구입금액이 2만원 이하입니다.\")\n",
+        "# 최종적으로 설정된 배송비를 출력합니다.\n",
         "print(f'회원님의 배송료는 {shipping_cost}입니다.')"
       ],
       "metadata": {
@@ -96,7 +107,7 @@
         "id": "bwFyTaI640ke",
         "outputId": "37885f88-353a-486a-a14a-c786d7c7282f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,10 +134,14 @@
     {
       "cell_type": "code",
       "source": [
+        "# work_hour 변수에 사용자로부터 근무시간을 입력받습니다. 입력받은 문자열을 int() 함수를 이용해 정수로 변환합니다.\n",
         "work_hour = int(input(\"근무시간 입력: \"))\n",
+        "# 입력받은 근무시간이 72시간 이상인지를 판단합니다.\n",
         "if work_hour >= 72:\n",
-        "  print(\"초과근무 하였습니다.\")\n",
+        "   # 근무시간이 72시간 이상이면, \"초과근무 하였습니다.\"를 출력합니다.\n",
+        "   print(\"초과근무 하였습니다.\")\n",
         "else:\n",
+        "  # 근무시간이 72시간 미만이면, \"정산근무 하였습니다.\"를 출력합니다.\n",
         "  print(\"정산근무 하였습니다.\")"
       ],
       "metadata": {
@@ -136,7 +151,7 @@
         "id": "CkacjJ5u8V4n",
         "outputId": "24ebbac8-0de9-40c7-a201-8eccd7e07f8b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,10 +177,14 @@
     {
       "cell_type": "code",
       "source": [
+        "# num 변수에 사용자로부터 정수를 입력받습니다. 입력받은 문자열을 int() 함수를 이용해 정수로 변환합니다.\n",
         "num = int(input(\"정수를 입력하시오.\"))\n",
+        "# 입력받은 정수를 2로 나눈 나머지가 0이 아닌지를 판단합니다.\n",
         "if (num % 2) != 0:\n",
+        "  # 정수를 2로 나눈 나머지가 0이 아니면, 즉 홀수면, \"홀수입니다\"를 출력합니다.\n",
         "  print(\"홀수입니다\")\n",
         "else:\n",
+        "  # 정수를 2로 나눈 나머지가 0이면, 즉 짝수면, \"짝수입니다.\"를 출력합니다.\n",
         "  print(\"짝수입니다.\")"
       ],
       "metadata": {
@@ -175,7 +194,7 @@
         "id": "-RErgVfW-T65",
         "outputId": "4eb7dc22-a6e4-4111-b1fb-1cf6f57874a6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,13 +227,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# name 변수에 사용자로부터 이름을 입력받습니다.\n",
         "name = input(\"이름을 입력하세요: \")\n",
+        "# age 변수에 사용자로부터 나이를 입력받습니다. 입력받은 문자열을 int() 함수를 이용해 정수로 변환합니다.\n",
         "age = int(input(\"나이를 입력하세요: \"))\n",
+        "# 입력받은 나이가 20세 이하인지를 판단합니다.\n",
         "if age <= 20:\n",
+        "   # 나이가 20세 이하면, \"프로그래밍을 배우는 최적의 나이입니다.\"를 출력합니다.\n",
         "   print(\"프로그래밍을 배우는 최적의 나이입니다.\")\n",
         "else:\n",
-        "   print(\"아직도 늦지 않았습니다. 도전정신\")\n",
-        ""
+        "  # 나이가 20세 초과면, \"아직도 늦지 않았습니다. 도전정신\"을 출력합니다.\n",
+        "  print(\"아직도 늦지 않았습니다. 도전정신\")"
       ],
       "metadata": {
         "colab": {
@@ -223,7 +246,7 @@
         "id": "kZP8lWMoBWdI",
         "outputId": "ce76b710-bd4e-483b-c293-8f8f74c6cf1b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +282,7 @@
         "id": "eX05HxHhFJNK",
         "outputId": "2736f9fc-2b68-443f-a839-d8c7f067052e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,13 +307,13 @@
         "    print(f\"{name}님, 아직도 늦지 않았습니다. 도전정신!\")  # 해당 메시지를 출력합니다.\n"
       ],
       "metadata": {
+        "id": "3G95L5xrGd92",
+        "outputId": "3d3383b9-4a71-43f8-b850-61897066bc09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "3G95L5xrGd92",
-        "outputId": "3d3383b9-4a71-43f8-b850-61897066bc09"
+        }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
