Colaboratory를 통해 생성됨

--- a/My1st_Code.ipynb
+++ b/My1st_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpvup6DWRKyiiW6ye16qzF",
+      "authorship_tag": "ABX9TyNeMFfxQasy232o2vShw7GR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,7 +55,8 @@
         }
       ],
       "source": [
-        "print(\"hello world!\")\n"
+        "# print 함수를 이용해 \"hello world!\" 문자열을 출력합니다.\n",
+        "print(\"hello world!\")"
       ]
     },
     {
@@ -70,6 +71,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# print 함수를 이용해 여러 수식의 계산 결과를 출력합니다. 4+4, 4-2, 4*4, 4//2의 계산 결과를 각각 출력합니다.\n",
         "print(4+4, 4-2, 4*4, 4//2)"
       ],
       "metadata": {
@@ -79,7 +81,7 @@
         "id": "asSf9_zlkQLa",
         "outputId": "e1462eb1-02ca-4ba6-b6b1-76caa5da7587"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
