--- a/py231019.ipynb
+++ b/py231019.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5cwxhBhAevhL4vL12ahKy",
+      "authorship_tag": "ABX9TyP9OlgZBmcckWyqqgHd0kwp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,14 +46,22 @@
     {
       "cell_type": "code",
       "source": [
+        "# print 함수를 이용해 \"2023년 10월 19일 정수빈\"이라는 문자열을 출력합니다.\n",
         "print(\"2023년 10월 19일 정수빈\")\n",
         "\n",
+        "# print 함수를 이용해 \"(1)09:20 도서관에서 책 빌리기\"라는 문자열을 출력합니다.\n",
         "print(\"(1)09:20 도서관에서 책 빌리기\")\n",
+        "# print 함수를 이용해 \"(2)11:10 컴퓨팅적사고의 기초코딩 수업\"이라는 문자열을 출력합니다.\n",
         "print(\"(2)11:10 컴퓨팅적사고의 기초코딩 수업\")\n",
+        "# print 함수를 이용해 \"(3)13:00 점심식사\"라는 문자열을 출력합니다.\n",
         "print(\"(3)13:00 점심식사\")\n",
+        "# print 함수를 이용해 \"(4)14:00 교양수업\"이라는 문자열을 출력합니다.\n",
         "print(\"(4)14:00 교양수업\")\n",
+        "# print 함수를 이용해 \"(5)16:00 파이썬 공부 및 레포트 작업\"이라는 문자열을 출력합니다.\n",
         "print(\"(5)16:00 파이썬 공부 및 레포트 작업\")\n",
+        "# print 함수를 이용해 \"(6)17:40 저녁식사 및 집안일 돕기\"라는 문자열을 출력합니다.\n",
         "print(\"(6)17:40 저녁식사 및 집안일 돕기\")\n",
+        "# print 함수를 이용해 \"(7)19:00 LOL하기\"라는 문자열을 출력합니다.\n",
         "print(\"(7)19:00 LOL하기\")"
       ],
       "metadata": {
@@ -63,7 +71,7 @@
         "id": "bL2uyfspx92S",
         "outputId": "deaba17f-c0d5-40fd-b97c-82c90b14385f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,6 +102,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# print 함수를 이용해 \"식사하셨습니까? 행님\"이라는 문자열을 출력합니다.\n",
         "print(\"식사하셨습니까? 행님\")"
       ],
       "metadata": {
@@ -103,7 +112,7 @@
         "id": "6_q7iKKd27CQ",
         "outputId": "313f39c3-0df5-412a-a288-cffe1558b10b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,17 +144,25 @@
     {
       "cell_type": "code",
       "source": [
+        "# input 함수를 이용해 첫 번째 학생의 점수를 입력받아 n1 변수에 저장합니다.\n",
         "n1 = input(\"학생 점수를 입력하시오\")\n",
+        "# input 함수를 이용해 두 번째 학생의 점수를 입력받아 n2 변수에 저장합니다.\n",
         "n2 = input(\"학생 점수를 입력하시오\")\n",
+        "# input 함수를 이용해 세 번째 학생의 점수를 입력받아 n3 변수에 저장합니다.\n",
         "n3 = input(\"학생 점수를 입력하시오\")\n",
+        "# input 함수를 이용해 네 번째 학생의 점수를 입력받아 n4 변수에 저장합니다.\n",
         "n4 = input(\"학생 점수를 입력하시오\")\n",
         "\n",
-        "\n",
+        "# print 함수를 이용해 \"국어 점수 순위\"라는 문자열을 출력합니다.\n",
         "print(\"국어 점수 순위\")\n",
+        "# print 함수를 이용해 \"1등\"과 n4 변수의 값을 출력합니다.\n",
         "print(\"1등\", n4)\n",
+        "# print 함수를 이용해 \"2등\"과 n2 변수의 값을 출력합니다.\n",
         "print(\"2등\", n2)\n",
+        "# print 함수를 이용해 \"3등\"과 n1 변수의 값을 출력합니다.\n",
         "print(\"3등\", n1)\n",
-        "print(\"4등\", n3)\n"
+        "# print 함수를 이용해 \"4등\"과 n3 변수의 값을 출력합니다.\n",
+        "print(\"4등\", n3)"
       ],
       "metadata": {
         "colab": {
@@ -154,7 +171,7 @@
         "id": "-62gkdCi4QtB",
         "outputId": "10bd5050-6d17-46c4-8a2b-105a9275ae67"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,12 +202,20 @@
     {
       "cell_type": "code",
       "source": [
+        "# input 함수를 이용해 사용자로부터 값을 입력받아 정수형으로 변환한 후 n1 변수에 저장합니다.\n",
         "n1 = int(input(\"n1의 값을 입력하시오\"))\n",
+        "# input 함수를 이용해 사용자로부터 값을 입력받아 정수형으로 변환한 후 n2 변수에 저장합니다.\n",
         "n2 = int(input(\"n2의 값을 입력하시오\"))\n",
+        "\n",
+        "# n1과 n2의 합을 계산하여 total이라는 변수에 저장합니다.\n",
         "total = n1+n2\n",
+        "# total을 2로 나눈 값을 계산하여 average라는 변수에 저장합니다.\n",
         "average = total / 2\n",
+        "\n",
+        "# print 함수를 이용해 total 변수의 값을 출력합니다.\n",
         "print(total)\n",
-        "print(average)\n"
+        "# print 함수를 이용해 average 변수의 값을 출력합니다.\n",
+        "print(average)"
       ],
       "metadata": {
         "colab": {
@@ -199,7 +224,7 @@
         "id": "Nq9aOgfi3FqX",
         "outputId": "54921413-438c-41f5-faca-5b167b59c91a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
